Minor packaging cleanup based on related generator-connection changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script data-main="js/index" src="js/components/requirejs/require.js"></script>
-        <title>Node Connection Test</title>
+        <title>Generator Connection Test</title>
     </head>
     <body>
         <div class="content"></div>
